jay/y.output
   0  $accept : ROOT $end

   1  ROOT : package

   2  package : class_list

   3  class_thing : class
   4              | struct
   5              | namespace
   6              | use
   7              | enumeration
   8              | import

   9  class_list : class_thing
  10             | class_list class_thing

  11  namespace : NAMESPACE name START_BLOCK END_BLOCK
  12            | NAMESPACE name START_BLOCK class_list END_BLOCK

  13  use : USE name END_STATEMENT

  14  class_specifiers : access_specifiers
  15                   |

  16  import : IMPORT name END_STATEMENT
  17         | IMPORT constant_string END_STATEMENT

  18  struct : class_specifiers STRUCT identifier class_body

  19  class : class_specifiers CLASS identifier class_body
  20        | class_specifiers CLASS identifier EXTENDS name class_body

  21  enumeration : class_specifiers ENUM identifier START_BLOCK identifier_list END_BLOCK
  22              | class_specifiers ENUM identifier START_BLOCK END_BLOCK

  23  class_body : START_BLOCK END_BLOCK
  24             | START_BLOCK class_body_declarations END_BLOCK

  25  class_body_declarations : class_body_declaration
  26                          | class_body_declarations class_body_declaration

  27  class_body_declaration : field_declaration
  28                         | method_declaration
  29                         | native_declaration
  30                         | access_specifiers field_declaration
  31                         | access_specifiers method_declaration
  32                         | access_specifiers native_declaration
  33                         | enumeration

  34  field_declaration : type identifier_list END_STATEMENT

  35  native_declaration : NATIVE type identifier declare_arguments END_STATEMENT

  36  method_declaration : type identifier declare_arguments block_statement

  37  declare_arguments : OPEN_PAREN declare_argument_list CLOSE_PAREN
  38                    | OPEN_PAREN CLOSE_PAREN

  39  declare_argument_list : argument_declaration
  40                        | declare_argument_list COMMA argument_declaration

  41  argument_declaration : type identifier

  42  type : name
  43       | base_type
  44       | complex_type

  45  complex_type : type ARRAY_DEF
  46               | type POINTER
  47               | type REFERENCE

  48  base_type : INT
  49            | BOOL
  50            | CHAR
  51            | BYTE
  52            | VOID

  53  expression : expressionX

  54  expressionX : expressionX BOOL_AND expression0
  55              | expressionX BOOL_OR expression0
  56              | expression0

  57  expression0 : BOOL_NOT expression0
  58              | expressionA

  59  expressionA : expressionA EQ expressionB
  60              | expressionA NE expressionB
  61              | expressionA GT expressionB
  62              | expressionA LT expressionB
  63              | expressionA GE expressionB
  64              | expressionA LE expressionB
  65              | expressionB

  66  expressionB : expressionB AND expressionC
  67              | expressionB OR expressionC
  68              | expressionB XOR expressionC
  69              | expressionC

  70  expressionC : expressionC SHIFT_LEFT expression1
  71              | expressionC SHIFT_RIGHT expression1
  72              | expression1

  73  expression1 : expression1 ADD expression2
  74              | expression1 SUB expression2
  75              | expression2

  76  expression2 : expression2 MUL expression3
  77              | expression2 DIV expression3
  78              | expression2 MOD expression3
  79              | expression3

  80  expression3 : unary_expression
  81              | NOT expression3

  82  access_specifiers : access_specifiers access_specifier
  83                    | access_specifier

  84  access_specifier : PUBLIC
  85                   | PRIVATE
  86                   | PROTECTED
  87                   | STATIC
  88                   | CONST

  89  ident_assign : identifier
  90               | identifier ASSIGN expression

  91  identifier_list : ident_assign
  92                  | identifier_list COMMA ident_assign

  93  empty_statement : END_STATEMENT

  94  method_call_statement : method_call

  95  labelled_statement : identifier COLON loop_statement
  96                     | loop_statement

  97  loop_statement : foreach_statement
  98                 | for_statement
  99                 | do_statement
 100                 | while_statement

 101  do_statement : DO statement WHILE OPEN_PAREN expression CLOSE_PAREN END_STATEMENT

 102  foreach_statement : FOREACH OPEN_PAREN type identifier END_STATEMENT expression CLOSE_PAREN statement

 103  for_statement : FOR OPEN_PAREN within_for_statement expression END_STATEMENT very_simple_statement CLOSE_PAREN statement
 104                | FOR OPEN_PAREN within_for_statement END_STATEMENT very_simple_statement CLOSE_PAREN statement
 105                | FOR OPEN_PAREN within_for_statement expression END_STATEMENT CLOSE_PAREN statement
 106                | FOR OPEN_PAREN within_for_statement END_STATEMENT CLOSE_PAREN statement

 107  switch_statement : SWITCH OPEN_PAREN expression CLOSE_PAREN START_BLOCK case_list END_BLOCK
 108                   | SWITCH OPEN_PAREN expression CLOSE_PAREN START_BLOCK END_BLOCK

 109  case_list : case
 110            | case_list case
 111            | default
 112            | case_list default

 113  case : CASE expression_list COLON block_statement_list

 114  default : DEFAULT COLON block_statement_list

 115  if_then_statement : IF OPEN_PAREN expression CLOSE_PAREN statement

 116  if_then_else_statement : IF OPEN_PAREN expression CLOSE_PAREN statement_inner ELSE statement

 117  if_then_else_statement_inner : IF OPEN_PAREN expression CLOSE_PAREN statement_inner ELSE statement_inner

 118  while_statement : WHILE OPEN_PAREN expression CLOSE_PAREN statement

 119  while_statement_inner : WHILE OPEN_PAREN expression CLOSE_PAREN statement_inner

 120  return_statement : RETURN END_STATEMENT
 121                   | RETURN expression END_STATEMENT

 122  throw_statement : THROW expression END_STATEMENT

 123  try_statement : TRY block_statement catches
 124                | TRY block_statement finally
 125                | TRY block_statement catches finally

 126  catches : catch_clause
 127          | catches catch_clause

 128  catch_clause : CATCH OPEN_PAREN argument_declaration CLOSE_PAREN block_statement

 129  finally : FINALLY block_statement

 130  break_statement : BREAK
 131                  | BREAK identifier

 132  continue_statement : CONTINUE
 133                     | CONTINUE identifier

 134  statement : simple_statement
 135            | if_then_statement
 136            | if_then_else_statement
 137            | labelled_statement
 138            | switch_statement

 139  within_for_statement : very_simple_statement END_STATEMENT
 140                       | local_declaration
 141                       | END_STATEMENT

 142  very_simple_statement : assignment_statement
 143                        | method_call_statement

 144  simple_statement : very_simple_statement END_STATEMENT
 145                   | block_statement
 146                   | throw_statement
 147                   | return_statement
 148                   | try_statement
 149                   | break_statement END_STATEMENT
 150                   | continue_statement END_STATEMENT
 151                   | empty_statement

 152  assignment_statement : assignment

 153  statement_inner : simple_statement
 154                  | if_then_else_statement_inner
 155                  | while_statement_inner

 156  local_declaration : field_declaration
 157                    | VARIABLE field_declaration

 158  within_block_statement : local_declaration
 159                         | statement

 160  left_value : name
 161             | pointer_access
 162             | field_access
 163             | vector_access

 164  assignment : left_value ASSIGN expression

 165  expression_list : expression
 166                  | expression_list COMMA expression

 167  block_statement : START_BLOCK END_BLOCK
 168                  | START_BLOCK block_statement_list END_BLOCK

 169  block_statement_list : within_block_statement
 170                       | block_statement_list within_block_statement

 171  class_qualifier : CLASS LT type GT

 172  field_access : primary DOT identifier
 173               | SUPER DOT identifier

 174  method_call : name OPEN_PAREN CLOSE_PAREN
 175              | name OPEN_PAREN expression_list CLOSE_PAREN
 176              | primary DOT identifier OPEN_PAREN CLOSE_PAREN
 177              | primary DOT identifier OPEN_PAREN expression_list CLOSE_PAREN
 178              | SUPER DOT identifier OPEN_PAREN CLOSE_PAREN
 179              | SUPER DOT identifier OPEN_PAREN expression_list CLOSE_PAREN
 180              | NATIVE DOT identifier OPEN_PAREN CLOSE_PAREN
 181              | NATIVE DOT identifier OPEN_PAREN expression_list CLOSE_PAREN

 182  name : simple_name
 183       | qualified_name

 184  simple_name : identifier

 185  qualified_name : name DOT identifier

 186  unary_expression : thing
 187                   | SUB unary_expression

 188  thing : primary
 189        | name

 190  literal : constant_null
 191          | constant_integer
 192          | constant_string
 193          | constant_cstring
 194          | constant_char
 195          | constant_double
 196          | constant_boolean

 197  primary : literal
 198          | THIS
 199          | vector_list
 200          | OPEN_PAREN expression CLOSE_PAREN
 201          | cast
 202          | new
 203          | field_access
 204          | method_call
 205          | vector_access
 206          | pointer_access
 207          | class_qualifier

 208  vector_list : type START_BLOCK expression_list END_BLOCK
 209              | type START_BLOCK expression_list COMMA END_BLOCK
 210              | START_BLOCK expression_list END_BLOCK
 211              | START_BLOCK expression_list COMMA END_BLOCK

 212  pointer_access : OPEN_SQUARE expression CLOSE_SQUARE

 213  vector_access : name OPEN_SQUARE expression CLOSE_SQUARE
 214                | primary OPEN_SQUARE expression CLOSE_SQUARE

 215  cast : CAST LT type GT OPEN_PAREN expression CLOSE_PAREN

 216  new : NEW type OPEN_SQUARE expression CLOSE_SQUARE
 217      | NEW type OPEN_PAREN expression_list CLOSE_PAREN
 218      | NEW type OPEN_PAREN CLOSE_PAREN

 219  identifier : IDENTIFIER

 220  constant_null : CONST_NULL

 221  constant_integer : CONST_INT

 222  constant_string : CONST_STRING

 223  constant_cstring : CONST_CSTRING

 224  constant_char : CONST_CHAR

 225  constant_double : CONST_DOUBLE

 226  constant_boolean : CONST_TRUE
 227                   | CONST_FALSE

state 0
	$accept : . ROOT $end  (0)
	class_specifiers : .  (15)

	IMPORT  shift 1
	NAMESPACE  shift 2
	USE  shift 3
	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	CLASS  reduce 15
	STRUCT  reduce 15
	ENUM  reduce 15

	ROOT  goto 9
	package  goto 10
	class_list  goto 11
	class_thing  goto 12
	class  goto 13
	struct  goto 14
	namespace  goto 15
	use  goto 16
	enumeration  goto 17
	import  goto 18
	class_specifiers  goto 19
	access_specifiers  goto 20
	access_specifier  goto 21


state 1
	import : IMPORT . name END_STATEMENT  (16)
	import : IMPORT . constant_string END_STATEMENT  (17)

	CONST_STRING  shift 22
	IDENTIFIER  shift 23
	.  error

	name  goto 24
	constant_string  goto 25
	identifier  goto 26
	simple_name  goto 27
	qualified_name  goto 28


state 2
	namespace : NAMESPACE . name START_BLOCK END_BLOCK  (11)
	namespace : NAMESPACE . name START_BLOCK class_list END_BLOCK  (12)

	IDENTIFIER  shift 23
	.  error

	name  goto 29
	identifier  goto 26
	simple_name  goto 27
	qualified_name  goto 28


state 3
	use : USE . name END_STATEMENT  (13)

	IDENTIFIER  shift 23
	.  error

	name  goto 30
	identifier  goto 26
	simple_name  goto 27
	qualified_name  goto 28


state 4
	access_specifier : CONST .  (88)

	.  reduce 88


state 5
	access_specifier : STATIC .  (87)

	.  reduce 87


state 6
	access_specifier : PUBLIC .  (84)

	.  reduce 84


state 7
	access_specifier : PRIVATE .  (85)

	.  reduce 85


state 8
	access_specifier : PROTECTED .  (86)

	.  reduce 86


state 9
	$accept : ROOT . $end  (0)

	$end  accept


state 10
	ROOT : package .  (1)

	.  reduce 1


state 11
	package : class_list .  (2)
	class_list : class_list . class_thing  (10)
	class_specifiers : .  (15)

	IMPORT  shift 1
	NAMESPACE  shift 2
	USE  shift 3
	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	$end  reduce 2
	CLASS  reduce 15
	STRUCT  reduce 15
	ENUM  reduce 15

	class_thing  goto 31
	class  goto 13
	struct  goto 14
	namespace  goto 15
	use  goto 16
	enumeration  goto 17
	import  goto 18
	class_specifiers  goto 19
	access_specifiers  goto 20
	access_specifier  goto 21


state 12
	class_list : class_thing .  (9)

	.  reduce 9


state 13
	class_thing : class .  (3)

	.  reduce 3


state 14
	class_thing : struct .  (4)

	.  reduce 4


state 15
	class_thing : namespace .  (5)

	.  reduce 5


state 16
	class_thing : use .  (6)

	.  reduce 6


state 17
	class_thing : enumeration .  (7)

	.  reduce 7


state 18
	class_thing : import .  (8)

	.  reduce 8


state 19
	struct : class_specifiers . STRUCT identifier class_body  (18)
	class : class_specifiers . CLASS identifier class_body  (19)
	class : class_specifiers . CLASS identifier EXTENDS name class_body  (20)
	enumeration : class_specifiers . ENUM identifier START_BLOCK identifier_list END_BLOCK  (21)
	enumeration : class_specifiers . ENUM identifier START_BLOCK END_BLOCK  (22)

	CLASS  shift 32
	STRUCT  shift 33
	ENUM  shift 34
	.  error


state 20
	class_specifiers : access_specifiers .  (14)
	access_specifiers : access_specifiers . access_specifier  (82)

	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	CLASS  reduce 14
	STRUCT  reduce 14
	ENUM  reduce 14

	access_specifier  goto 35


state 21
	access_specifiers : access_specifier .  (83)

	.  reduce 83


state 22
	constant_string : CONST_STRING .  (222)

	.  reduce 222


state 23
	identifier : IDENTIFIER .  (219)

	.  reduce 219


state 24
	import : IMPORT name . END_STATEMENT  (16)
	qualified_name : name . DOT identifier  (185)

	END_STATEMENT  shift 36
	DOT  shift 37
	.  error


state 25
	import : IMPORT constant_string . END_STATEMENT  (17)

	END_STATEMENT  shift 38
	.  error


state 26
	simple_name : identifier .  (184)

	.  reduce 184


state 27
	name : simple_name .  (182)

	.  reduce 182


state 28
	name : qualified_name .  (183)

	.  reduce 183


state 29
	namespace : NAMESPACE name . START_BLOCK END_BLOCK  (11)
	namespace : NAMESPACE name . START_BLOCK class_list END_BLOCK  (12)
	qualified_name : name . DOT identifier  (185)

	START_BLOCK  shift 39
	DOT  shift 37
	.  error


state 30
	use : USE name . END_STATEMENT  (13)
	qualified_name : name . DOT identifier  (185)

	END_STATEMENT  shift 40
	DOT  shift 37
	.  error


state 31
	class_list : class_list class_thing .  (10)

	.  reduce 10


state 32
	class : class_specifiers CLASS . identifier class_body  (19)
	class : class_specifiers CLASS . identifier EXTENDS name class_body  (20)

	IDENTIFIER  shift 23
	.  error

	identifier  goto 41


state 33
	struct : class_specifiers STRUCT . identifier class_body  (18)

	IDENTIFIER  shift 23
	.  error

	identifier  goto 42


state 34
	enumeration : class_specifiers ENUM . identifier START_BLOCK identifier_list END_BLOCK  (21)
	enumeration : class_specifiers ENUM . identifier START_BLOCK END_BLOCK  (22)

	IDENTIFIER  shift 23
	.  error

	identifier  goto 43


state 35
	access_specifiers : access_specifiers access_specifier .  (82)

	.  reduce 82


state 36
	import : IMPORT name END_STATEMENT .  (16)

	.  reduce 16


state 37
	qualified_name : name DOT . identifier  (185)

	IDENTIFIER  shift 23
	.  error

	identifier  goto 44


state 38
	import : IMPORT constant_string END_STATEMENT .  (17)

	.  reduce 17


state 39
	namespace : NAMESPACE name START_BLOCK . END_BLOCK  (11)
	namespace : NAMESPACE name START_BLOCK . class_list END_BLOCK  (12)
	class_specifiers : .  (15)

	END_BLOCK  shift 45
	IMPORT  shift 1
	NAMESPACE  shift 2
	USE  shift 3
	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	CLASS  reduce 15
	STRUCT  reduce 15
	ENUM  reduce 15

	class_list  goto 46
	class_thing  goto 12
	class  goto 13
	struct  goto 14
	namespace  goto 15
	use  goto 16
	enumeration  goto 17
	import  goto 18
	class_specifiers  goto 19
	access_specifiers  goto 20
	access_specifier  goto 21


state 40
	use : USE name END_STATEMENT .  (13)

	.  reduce 13


state 41
	class : class_specifiers CLASS identifier . class_body  (19)
	class : class_specifiers CLASS identifier . EXTENDS name class_body  (20)

	START_BLOCK  shift 47
	EXTENDS  shift 48
	.  error

	class_body  goto 49


state 42
	struct : class_specifiers STRUCT identifier . class_body  (18)

	START_BLOCK  shift 47
	.  error

	class_body  goto 50


state 43
	enumeration : class_specifiers ENUM identifier . START_BLOCK identifier_list END_BLOCK  (21)
	enumeration : class_specifiers ENUM identifier . START_BLOCK END_BLOCK  (22)

	START_BLOCK  shift 51
	.  error


state 44
	qualified_name : name DOT identifier .  (185)

	.  reduce 185


state 45
	namespace : NAMESPACE name START_BLOCK END_BLOCK .  (11)

	.  reduce 11


state 46
	class_list : class_list . class_thing  (10)
	namespace : NAMESPACE name START_BLOCK class_list . END_BLOCK  (12)
	class_specifiers : .  (15)

	END_BLOCK  shift 52
	IMPORT  shift 1
	NAMESPACE  shift 2
	USE  shift 3
	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	CLASS  reduce 15
	STRUCT  reduce 15
	ENUM  reduce 15

	class_thing  goto 31
	class  goto 13
	struct  goto 14
	namespace  goto 15
	use  goto 16
	enumeration  goto 17
	import  goto 18
	class_specifiers  goto 19
	access_specifiers  goto 20
	access_specifier  goto 21


state 47
	class_body : START_BLOCK . END_BLOCK  (23)
	class_body : START_BLOCK . class_body_declarations END_BLOCK  (24)
	class_specifiers : .  (15)

	IDENTIFIER  shift 23
	END_BLOCK  shift 53
	BOOL  shift 54
	INT  shift 55
	BYTE  shift 56
	CHAR  shift 57
	VOID  shift 58
	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	NATIVE  shift 59
	ENUM  reduce 15

	enumeration  goto 60
	name  goto 61
	class_specifiers  goto 62
	access_specifiers  goto 63
	identifier  goto 26
	class_body_declarations  goto 64
	class_body_declaration  goto 65
	field_declaration  goto 66
	method_declaration  goto 67
	native_declaration  goto 68
	type  goto 69
	base_type  goto 70
	complex_type  goto 71
	access_specifier  goto 21
	simple_name  goto 27
	qualified_name  goto 28


state 48
	class : class_specifiers CLASS identifier EXTENDS . name class_body  (20)

	IDENTIFIER  shift 23
	.  error

	name  goto 72
	identifier  goto 26
	simple_name  goto 27
	qualified_name  goto 28


state 49
	class : class_specifiers CLASS identifier class_body .  (19)

	.  reduce 19


state 50
	struct : class_specifiers STRUCT identifier class_body .  (18)

	.  reduce 18


state 51
	enumeration : class_specifiers ENUM identifier START_BLOCK . identifier_list END_BLOCK  (21)
	enumeration : class_specifiers ENUM identifier START_BLOCK . END_BLOCK  (22)

	IDENTIFIER  shift 23
	END_BLOCK  shift 73
	.  error

	identifier  goto 74
	identifier_list  goto 75
	ident_assign  goto 76


state 52
	namespace : NAMESPACE name START_BLOCK class_list END_BLOCK .  (12)

	.  reduce 12


state 53
	class_body : START_BLOCK END_BLOCK .  (23)

	.  reduce 23


state 54
	base_type : BOOL .  (49)

	.  reduce 49


state 55
	base_type : INT .  (48)

	.  reduce 48


state 56
	base_type : BYTE .  (51)

	.  reduce 51


state 57
	base_type : CHAR .  (50)

	.  reduce 50


state 58
	base_type : VOID .  (52)

	.  reduce 52


state 59
	native_declaration : NATIVE . type identifier declare_arguments END_STATEMENT  (35)

	IDENTIFIER  shift 23
	BOOL  shift 54
	INT  shift 55
	BYTE  shift 56
	CHAR  shift 57
	VOID  shift 58
	.  error

	name  goto 61
	identifier  goto 26
	type  goto 77
	base_type  goto 70
	complex_type  goto 71
	simple_name  goto 27
	qualified_name  goto 28


state 60
	class_body_declaration : enumeration .  (33)

	.  reduce 33


state 61
	type : name .  (42)
	qualified_name : name . DOT identifier  (185)

	DOT  shift 37
	IDENTIFIER  reduce 42
	OPEN_PAREN  reduce 42
	ARRAY_DEF  reduce 42
	OPEN_SQUARE  reduce 42
	GT  reduce 42
	REFERENCE  reduce 42
	POINTER  reduce 42


state 62
	enumeration : class_specifiers . ENUM identifier START_BLOCK identifier_list END_BLOCK  (21)
	enumeration : class_specifiers . ENUM identifier START_BLOCK END_BLOCK  (22)

	ENUM  shift 34
	.  error


state 63
	class_specifiers : access_specifiers .  (14)
	class_body_declaration : access_specifiers . field_declaration  (30)
	class_body_declaration : access_specifiers . method_declaration  (31)
	class_body_declaration : access_specifiers . native_declaration  (32)
	access_specifiers : access_specifiers . access_specifier  (82)

	IDENTIFIER  shift 23
	BOOL  shift 54
	INT  shift 55
	BYTE  shift 56
	CHAR  shift 57
	VOID  shift 58
	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	NATIVE  shift 59
	ENUM  reduce 14

	name  goto 61
	identifier  goto 26
	field_declaration  goto 78
	method_declaration  goto 79
	native_declaration  goto 80
	type  goto 69
	base_type  goto 70
	complex_type  goto 71
	access_specifier  goto 35
	simple_name  goto 27
	qualified_name  goto 28


state 64
	class_body : START_BLOCK class_body_declarations . END_BLOCK  (24)
	class_body_declarations : class_body_declarations . class_body_declaration  (26)
	class_specifiers : .  (15)

	IDENTIFIER  shift 23
	END_BLOCK  shift 81
	BOOL  shift 54
	INT  shift 55
	BYTE  shift 56
	CHAR  shift 57
	VOID  shift 58
	CONST  shift 4
	STATIC  shift 5
	PUBLIC  shift 6
	PRIVATE  shift 7
	PROTECTED  shift 8
	NATIVE  shift 59
	ENUM  reduce 15

	enumeration  goto 60
	name  goto 61
	class_specifiers  goto 62
	access_specifiers  goto 63
	identifier  goto 26
	class_body_declaration  goto 82
	field_declaration  goto 66
	method_declaration  goto 67
	native_declaration  goto 68
	type  goto 69
	base_type  goto 70
	complex_type  goto 71
	access_specifier  goto 21
	simple_name  goto 27
	qualified_name  goto 28


state 65
	class_body_declarations : class_body_declaration .  (25)

	.  reduce 25


state 66
	class_body_declaration : field_declaration .  (27)

	.  reduce 27


state 67
	class_body_declaration : method_declaration .  (28)

	.  reduce 28


state 68
	class_body_declaration : native_declaration .  (29)

	.  reduce 29


state 69
	field_declaration : type . identifier_list END_STATEMENT  (34)
	method_declaration : type . identifier declare_arguments block_statement  (36)
	complex_type : type . ARRAY_DEF  (45)
	complex_type : type . POINTER  (46)
	complex_type : type . REFERENCE  (47)

	IDENTIFIER  shift 23
	ARRAY_DEF  shift 83
	REFERENCE  shift 84
	POINTER  shift 85
	.  error

	identifier  goto 86
	identifier_list  goto 87
	ident_assign  goto 76


state 70
	type : base_type .  (43)

	.  reduce 43


state 71
	type : complex_type .  (44)

	.  reduce 44


state 72
	class : class_specifiers CLASS identifier EXTENDS name . class_body  (20)
	qualified_name : name . DOT identifier  (185)

	START_BLOCK  shift 47
	DOT  shift 37
	.  error

	class_body  goto 88


state 73
	enumeration : class_specifiers ENUM identifier START_BLOCK END_BLOCK .  (22)

	.  reduce 22


state 74
	ident_assign : identifier .  (89)
	ident_assign : identifier . ASSIGN expression  (90)

	ASSIGN  shift 89
	COMMA  reduce 89
	END_BLOCK  reduce 89
	END_STATEMENT  reduce 89


state 75
	enumeration : class_specifiers ENUM identifier START_BLOCK identifier_list . END_BLOCK  (21)
	identifier_list : identifier_list . COMMA ident_assign  (92)

	COMMA  shift 90
	END_BLOCK  shift 91
	.  error


state 76
	identifier_list : ident_assign .  (91)

	.  reduce 91


state 77
	native_declaration : NATIVE type . identifier declare_arguments END_STATEMENT  (35)
	complex_type : type . ARRAY_DEF  (45)
	complex_type : type . POINTER  (46)
	complex_type : type . REFERENCE  (47)

	IDENTIFIER  shift 23
	ARRAY_DEF  shift 83
	REFERENCE  shift 84
	POINTER  shift 85
	.  error

	identifier  goto 92


state 78
	class_body_declaration : access_specifiers field_declaration .  (30)

	.  reduce 30


state 79
	class_body_declaration : access_specifiers method_declaration .  (31)

	.  reduce 31


state 80
	class_body_declaration : access_specifiers native_declaration .  (32)

	.  reduce 32


state 81
	class_body : START_BLOCK class_body_declarations END_BLOCK .  (24)

	.  reduce 24


state 82
	class_body_declarations : class_body_declarations class_body_declaration .  (26)

	.  reduce 26


state 83
	complex_type : type ARRAY_DEF .  (45)

	.  reduce 45


state 84
	complex_type : type REFERENCE .  (47)

	.  reduce 47


state 85
	complex_type : type POINTER .  (46)

	.  reduce 46


state 86
	method_declaration : type identifier . declare_arguments block_statement  (36)
	ident_assign : identifier .  (89)
	ident_assign : identifier . ASSIGN expression  (90)

	ASSIGN  shift 89
	OPEN_PAREN  shift 93
	COMMA  reduce 89
	END_STATEMENT  reduce 89

	declare_arguments  goto 94


state 87
	field_declaration : type identifier_list . END_STATEMENT  (34)
	identifier_list : identifier_list . COMMA ident_assign  (92)

	COMMA  shift 90
	END_STATEMENT  shift 95
	.  error


state 88
	class : class_specifiers CLASS identifier EXTENDS name class_body .  (20)

	.  reduce 20


state 89
	ident_assign : identifier ASSIGN . expression  (90)

	CONST_INT  shift 96
	CONST_DOUBLE  shift 97
	CONST_STRING  shift 22
	CONST_CSTRING  shift 98
	CONST_CHAR  shift 99
	IDENTIFIER  shift 23
	CONST_TRUE  shift 100
	CONST_FALSE  shift 101
	CONST_NULL  shift 102
	START_BLOCK  shift 103
	OPEN_PAREN  shift 104
	OPEN_SQUARE  shift 105
	SUB  shift 106
	NOT  shift 107
	BOOL_NOT  shift 108
	BOOL  shift 54
	INT  shift 55
	BYTE  shift 56
	CHAR  shift 57
	VOID  shift 58
	CLASS  shift 109
	CAST  shift 110
	THIS  shift 111
	SUPER  shift 112
	NATIVE  shift 113
	NEW  shift 114
	.  error

	name  goto 115
	constant_string  goto 116
	identifier  goto 26
	type  goto 117
	base_type  goto 70
	complex_type  goto 71
	expression  goto 118
	expressionX  goto 119
	expression0  goto 120
	expressionA  goto 121
	expressionB  goto 122
	expressionC  goto 123
	expression1  goto 124
	expression2  goto 125
	expression3  goto 126
	unary_expression  goto 127
	method_call  goto 128
	pointer_access  goto 129
	field_access  goto 130
	vector_access  goto 131
	class_qualifier  goto 132
	primary  goto 133
	simple_name  goto 27
	qualified_name  goto 28
	thing  goto 134
	literal  goto 135
	constant_null  goto 136
	constant_integer  goto 137
	constant_cstring  goto 138
	constant_char  goto 139
	constant_double  goto 140
	constant_boolean  goto 141
	vector_list  goto 142
	cast  goto 143
	new  goto 144


state 90
	identifier_list : identifier_list COMMA . ident_assign  (92)

	IDENTIFIER  shift 23
	.  error

	identifier  goto 74
	ident_assign  goto 145


state 91
	enumeration : class_specifiers ENUM identifier START_BLOCK identifier_list END_BLOCK .  (21)

	.  reduce 21


state 92
	native_declaration : NATIVE type identifier . declare_arguments END_STATEMENT  (35)

	OPEN_PAREN  shift 93
	.  error

	declare_arguments  goto 146


state 93
	declare_arguments : OPEN_PAREN . declare_argument_list CLOSE_PAREN  (37)
	declare_arguments : OPEN_PAREN . CLOSE_PAREN  (38)

	IDENTIFIER  shift 23
	CLOSE_PAREN  shift 147
	BOOL  shift 54
	INT  shift 55
	BYTE  shift 56
	CHAR  shift 57
	VOID  shift 58
	.  error

	name  goto 61
	identifier  goto 26
	type  goto 148
	declare_argument_list  goto 149
	argument_declaration  goto 150
	base_type  goto 70
	complex_type  goto 71
	simple_name  goto 27
	qualified_name  goto 28


state 94
	method_declaration : type identifier declare_arguments . block_statement  (36)

	START_BLOCK  shift 151
	.  error

	block_statement  goto 152


state 95
	field_declaration : type identifier_list END_STATEMENT .  (34)

	.  reduce 34


state 96
	constant_integer : CONST_INT .  (221)

	.  reduce 221


state 97
	constant_double : CONST_DOUBLE .  (225)

	.  reduce 225


state 98
	constant_cstring : CONST_CSTRING .  (223)

	.  reduce 223


state 99
	constant_char : CONST_CHAR .  (224)

	.  reduce 224


state 100
	constant_boolean : CONST_TRUE .  (226)

	.  reduce 226


state 101
	constant_boolean : CONST_FALSE .  (227)

	.  reduce 227


state 102
	constant_null : CONST_NULL .  (220)

	.  reduce 220


state 103
	vector_list : START_BLOCK . expression_list END_BLOCK  (210)
	vector_list : START_BLOCK . expression_list COMMA END_BLOCK  (211)

	CONST_INT  shift 96
	CONST_DOUBLE  shift 97
	CONST_STRING  shift 22
	CONST_CSTRING  shift 98
	CONST_CHAR  shift 99
	IDENTIFIER  shift 23
	CONST_TRUE  shift 100
	CONST_FALSE  shift 101
	CONST_NULL  shift 102
	START_BLOCK  shift 103
	OPEN_PAREN  shift 104
	OPEN_SQUARE  shift 105
	SUB  shift 106
	NOT  shift 107
	BOOL_NOT  shift 108
	BOOL  shift 54
	INT  shift 55
	BYTE  shift 56
	CHAR  shift 57
	VOID  shift 58
	CLASS  shift 109
	CAST  shift 110
	THIS  shift 111
	SUPER  shift 112
	NATIVE  shift 113
	NEW  shift 114
	.  error
